asg/tests/fail/mod.rs
// Copyright (C) 2019-2021 Aleo Systems Inc.
// This file is part of the Leo library.

// The Leo library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.

// The Leo library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details.

// You should have received a copy of the GNU General Public License
// along with the Leo library. If not, see <https://www.gnu.org/licenses/>.

pub mod address;
pub mod array;
pub mod boolean;
pub mod circuits;
pub mod console;
pub mod core;
pub mod definition;
pub mod field;
pub mod function;
// pub mod group; // we dont do context-specific type checking for groups
pub mod import;
pub mod integers;
pub mod mutability;
pub mod statements;
pub mod tuples;
